syntax = "proto3";

message Repeater {
  int32 device_kind = 1;
  int64 sn = 2;
  int32 sw_version = 3;
  int32 hw_version = 4;
  int32 rule_id = 5;
}

message Inverter {
  int32 device_kind = 1;
  int64 sn = 2;
  int32 usfw_version = 3;
  int32 sw_version = 4;
  int32 hw_part_num = 5;
  int32 hw_version = 6;
  int32 grid_profile_code = 7;
  int32 grid_profile_version = 8;
  int32 rf_hw_version = 9;
  int32 rf_sw_version = 10;
  int32 mi_rule_id = 11;
}

enum FeatureKey {
  UNSPECIFIED = 0;
  POWER_LIMIT = 8;
}

message Feature {
  FeatureKey key = 1;
  string value = 2;
}

message DevDataToDtu {
  string ymd_hms = 1;
  int32 offset = 2;
  int32 package_idx = 3;
  int32 err_code = 4;
  int32 time = 5;
}
